tests/files/parser_tests/should_fail/105.cmdr
//Should fail due to un matching parentheses
x = ((((((3)))))));